--- a/index.html
+++ b/index.html
@@ -36,7 +36,37 @@
 
        <!--hero/jumbotron-->
        <section>
-       </section>
+           <div>
+               <h3>Get Started Today</h3>
+               <p>Fill out this form and one of our trainers will schedule a consult</p>
+       <!--Add Form Element-->
+             <form>
+                 <label for="name">Enter full name:</label>
+                 <input type="text" placeholder="Your Name" name="name" id="name" />
+                 <label for="email">Enter email adress:</label>
+                 <input type="email" placeholder="Email Adress" name="email" id="email" />
+                 <label for="phone">Enter telephone number:</label>
+                 <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
+                 <p>
+                     Have you worked out with a trainer before?
+                     <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                     <label for="trainer-yes">Yes</label>
+                     <input type="radio" name="trainer-confirm" id="trainer-no" />
+                     <label for="trainer-no">No</label>
+                 </p>
+                 <p>
+                     I acknoledge that I am at least 18 years of age.
+                     <input type="radio" name="age-confirm" id="age-yes" />
+                     <label for="age-yes">Yes</label>
+                     <input type="radio" name="age-confirm" id="age-no" />
+                     <label for="age-no">No</label>
+                 </p>
+                 <button type="submit">
+                    Get running!
+                  </button>
+                </form>
+             </div>
+            </section>
 
        <!-- "what we do" section-->
        <section>
