--- a/index.html
+++ b/index.html
@@ -107,9 +107,48 @@
                </section>
 
        <!--"Meet The Trainers" section-->
-       <section>
-        <h2>Meet The Trainers</h2>
+       
+       <!--First trainer bio-->
+       <section id= "your trainers" class="trainers">
+        <h2 class="section-title primary-border">Meet The Trainers</h2>
+        <article class="trainer">
+        <img src="../../assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+        <div class="trainer-bio text-left">
+            <h3>Arron Stephens</h3>0
+            <h4>Speed / Strength</h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cumque ipsam obcaecati similique officia blanditiis dolorum incidunt 
+                tempore autem facere magni, sunt facilis quidem atque, libero voluptates repellat velit laudantium.
+            </p>
+            </div>
+        </article>
        </section>
+       <!--second trainer bio-->
+       <article class="trainer">
+           <div class="trainer-bio text-right">
+               <h3>Joanna Gill</h3>
+               <h4>Endurance</h4>
+               <p>
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dicta inventore, sed quos itaque corporis quidem officiis beatae,
+                   sint quo dolorum, perferendis natus distinctio reprehenderit exercitationem fuga! Nihil, eveniet natus.
+               </p>
+           </div>
+           <img src="../../assets/images/trainer-2.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+       </article>
+
+       <!--Third trainer-->
+       <article class="trainer">
+           <img src="../../assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+           <div class="trainer-bio text-left">
+               <h3>Harry "the Headband" Smith</h3>
+               <h4>Strength</h4>
+               <p>
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi alias dolorem beatae ea debitis, quam dolores magnam odit
+                   officia placeat expedita itaque voluptatum architecto fugit. Nisi eligendi cupiditate nulla labore.
+               </p>
+           </div>
+       </article>
+
 
        <!--"reach out"-->
        <section>
