--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <article class="trainer">
         <img src="../../assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
         <div class="trainer-bio text-left">
-            <h3>Arron Stephens</h3>0
+            <h3>Arron Stephens</h3>
             <h4>Speed / Strength</h4>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cumque ipsam obcaecati similique officia blanditiis dolorum incidunt 
@@ -153,6 +153,28 @@
        <!--"reach out"-->
        <section>
            <h2>Reach Out</h2>
+           <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.5537530594606!2d-112.09004854889079!3d33.64281084654685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b6e5a6d4ee455%3A0xce505f50d4e0b1b8!2s1029%20W%20Anderson%20Dr%2C%20Phoenix%2C%20AZ%2085023!5e0!3m2!1sen!2sus!4v1644658964829!5m2!1sen!2sus"
+            width="400"
+            height="400"
+            style="border:0;"
+            allowfullscreen=""
+            loading="lazy">
+           </iframe>
+           <h3>Run Buddy</h3>
+           <p>
+               Any questions or concerns before signing up?
+               <br />
+               Let us know and we'll be happy to talk to you!
+           </p>
+           <adress>
+               55 Main Street <br />
+               Some Town, Ca <br />
+               12345 <br />
+               P: 555.RUN.BUDZ (555.786.2839) <br />
+               E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+           </adress>
+           </div>
        </section>
 
        <!--footer-->
