meet the trainers section

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 
 
        <!--"reach out"-->
-       <section>
-           <h2>Reach Out</h2>
+       <section id="reach-out" class="contact">
+           <h2 class="section-title secondary border">Reach Out</h2>
            <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.5537530594606!2d-112.09004854889079!3d33.64281084654685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b6e5a6d4ee455%3A0xce505f50d4e0b1b8!2s1029%20W%20Anderson%20Dr%2C%20Phoenix%2C%20AZ%2085023!5e0!3m2!1sen!2sus!4v1644658964829!5m2!1sen!2sus"
             width="400"
