--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,5 +7,42 @@
     <title>Privacy Policy - Run Buddy</title>
   </head>
   <body>
+      <!--navigation-->
+      <header>
+        <h1>
+            <a href="/">RUN BUDDY</a>
+         </h1>
+         <nav>
+             <!--Unordered list element-->
+             <ul>
+                 <!--List item element-->
+                 <li>
+                     <!--anchor element-->
+                     <a href="#what-we-do">What We Do</a>
+                 </li>
+                 <li>
+                     <a href="#what-you-do">What You Do</a>
+                 </li>
+                 <li>
+                     <a href="#your-trainers">Your Trainers</a>
+                 </li>
+                 <li>
+                     <a href="#reach-out">Reach Out</a>
+                 </li>
+             </ul>
+         </nav>
+     </header>
+      
   </body>
+  <footer>
+    <h2> ❤️ Made with love by Run Buddy</h2>
+    <div>
+        <a href="#">Read Our Privacy Policy</a><br />
+        &copy; 2019 Run Buddy, Inc.
+    </div>
+</footer>
 </html>
+
+<section class="hero">
+
+</section>
